--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,3 +10,10 @@
   text-align: center;
 }
 
+.cta {
+  font-family: Verdana;
+  color: aquamarine;
+  font-size: 16px;
+  text-align: center;
+}
+
