--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,6 +20,13 @@
 .header2 {
   font-family: Verdana;
   font-size: 42px;
+  color: white;
+  text-align: center;
+}
+
+.header3 {
+  font-family: Verdana;
+  font-size: 21px;
   color: gray;
   text-align: center;
 }
